quick css fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,11 @@ html.lenis body {
   }
 }
 
+html,
+body {
+  overflow-x: clip;
+}
+
 body {
   font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
